# unitree-sdk-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cyclonedds-sys/: Cargo.toml  build.rs  wrapper.h
crates/cyclonedds-sys/bindings/: x86_64.rs
crates/cyclonedds-sys/csrc/: echo.c  echo.h  echo.idl
crates/cyclonedds-sys/src/: lib.rs
crates/cyclonedds-sys/tests/: echo.rs  smoke.rs
crates/unitree-dds/: Cargo.toml  build.rs
crates/unitree-dds/csrc/: unitree_api.c  unitree_api.h  unitree_api.idl  unitree_go.c  unitree_go.h  unitree_go.idl  unitree_hg.c  unitree_hg.h  unitree_hg.idl
crates/unitree-dds/src/: error.rs  lib.rs  qos.rs
crates/unitree-dds/src/backend/: cyclonedds.rs  mod.rs  rustdds.rs
crates/unitree-dds/tests/: loopback.rs
crates/unitree-go2/: Cargo.toml  build.rs
crates/unitree-go2/csrc/: std_msgs.c  std_msgs.h  std_msgs.idl
crates/unitree-go2/examples/: go2_bms_dump.rs  go2_lowstate_dump.rs  go2_stand.rs  lowcmd_crc_check.rs  utlidar_switch_smoke.rs
crates/unitree-go2/src/: lib.rs  lowcmd.rs  utlidar.rs
crates/unitree-msgs/: Cargo.toml  build.rs
crates/unitree-msgs/msgs/unitree_go/: BmsState.msg  IMUState.msg  LowState.msg  MotorState.msg
crates/unitree-msgs/src/: cdr.rs  lib.rs
crates/unitree-msgs/tests/: all_types.rs  roundtrip.rs
crates/unitree-rpc/: Cargo.toml  build.rs
crates/unitree-rpc/csrc/: rpc.c  rpc.h  rpc.idl  std_msgs.c  std_msgs.h  std_msgs.idl
crates/unitree-rpc/src/: lib.rs
doc/: README.md  design.md  go2-bringup.md  kickoff.md  plan.md
tools/: regen-bindings.sh  regen-descriptors.sh
