[workspace]
resolver = "2"
members = [
    "crates/cyclonedds-sys",
    "crates/unitree-msgs",
    "crates/unitree-dds",
    "crates/unitree-go2",
    "crates/unitree-rpc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/takarakasai/unitree-sdk-rs"
rust-version = "1.75"

[workspace.dependencies]
thiserror = "1"
tracing = "0.1"
bytes = "1"
