[package]
name = "cyclonedds-sys"
description = "Low-level FFI bindings to Eclipse Cyclone DDS (libddsc)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Tells Cargo this crate links the native `ddsc` library (dedup + metadata).
links = "ddsc"

[dependencies]

[build-dependencies]
bindgen = "0.70"
cc = "1"
