[package]
name = "unitree-msgs"
description = "Rust types for Unitree ROS2 messages (unitree_api / unitree_go / unitree_hg) with CDR (de)serialization"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

[build-dependencies]
